# bishop-engine

./: .gitignore  Cargo.toml  MENU_EDITOR.md  README.md
bishop/: Cargo.toml
bishop/examples/: wgpu_test.rs
bishop/src/: backend.rs  camera.rs  draw.rs  font.rs  frame.rs  input.rs  lib.rs  macroquad_impl.rs  screen.rs  text.rs  types.rs
bishop/src/audio/: cpal_backend.rs  mod.rs
bishop/src/backend/: draw.rs  mod.rs  texture.rs  time.rs  window.rs
bishop/src/camera/: camera2d.rs  mod.rs
bishop/src/draw/: mod.rs  params.rs
bishop/src/input/: gamepad.rs  keycode.rs  mod.rs  mouse.rs
bishop/src/macroquad/: context.rs  conversions.rs  impls.rs  mod.rs
bishop/src/macroquad_backend/: camera.rs  input.rs  mod.rs  text.rs  texture.rs  window.rs
bishop/src/material/: mod.rs  render_ops.rs  render_target.rs  shader.rs
bishop/src/text/: dimensions.rs  font.rs  mod.rs  params.rs
bishop/src/texture/: mod.rs
bishop/src/time/: mod.rs
bishop/src/types/: color.rs  mod.rs  rect.rs
bishop/src/wgpu/: app_runner.rs  context.rs  conversions.rs  conversions_window.rs  exec.rs  graphics_state.rs  impls.rs  input_state.rs  mod.rs  texture_loader.rs  time_state.rs
bishop/src/window/: cursor_icon.rs  mod.rs  window_config.rs
editor/: Cargo.toml  Makefile.toml  build.rs
editor/binaries/: game  game-playtest
editor/bundle_assets/: Info.plist
editor/scripts/.engine/: components.lua  engine.lua  entity.lua  global.lua  script.lua
editor/scripts/_engine/: animations.lua  audio.lua  components.lua  engine.lua  entity.lua  entitymodule.lua  globalmodule.lua  input.lua  menu.lua  script.lua  sounds.lua  text.lua
editor/src/: camera_actions.rs  camera_controller.rs  editor.rs  editor_actions.rs  editor_camera_controller.rs  editor_global.rs  global.rs  main.rs  tilemap_editor.rs
editor/src/app/: actions.rs  camera_controller.rs  mod.rs  sub_editor.rs
editor/src/canvas/: grid.frag  grid.rs  grid_shader.rs  mod.rs
editor/src/commands/: command_manager.rs  editor_command_manager.rs  entity_commands.rs  game_editor_commands.rs  mod.rs
editor/src/controls/: controls.rs
editor/src/editor_assets/: Icon.icns  assets.rs  editor_assets.rs  engine_scripts.rs  mod.rs  sounds_lua.rs
editor/src/entities/: mod.rs  prefab.rs
editor/src/game/: game_editor.rs  mod.rs
editor/src/gui/: add_entity_button.rs  gui_constants.rs  menu_bar.rs  menu_panel.rs  mod.rs  modal.rs  mode_selector.rs  resize_button.rs  text_button.rs  ui_element.rs  world_ui.rs
editor/src/menu/: menu_editor.rs  mod.rs  resize_handle.rs  ui.rs
editor/src/menu_editor/: canvas_module.rs  element_palette.rs  menu_canvas.rs  menu_editor.rs  menu_editor_panel.rs  menu_list_module.rs  menu_list_panel.rs  menu_properties_panel.rs  mod.rs  properties_module.rs  resize_handle.rs  ui.rs
editor/src/playtest/: mod.rs  playtest_process.rs  room_playtest.rs
editor/src/prefab/: mod.rs  prefab_actions.rs  prefab_editor.rs  tests.rs
editor/src/room/: drawing.rs  entity_drag.rs  entity_palette.rs  mod.rs  room_actions.rs  room_editor.rs  room_editor_actions.rs  room_editor_rendering.rs  selection.rs  shortcuts.rs
editor/src/shared/: selection.rs
editor/src/storage/: editor_storage.rs  export.rs  mod.rs  path_utils.rs  prefab_storage.rs  sound_preset_storage.rs  tests.rs  world_storage.rs
editor/src/tilemap/: background_module.rs  mod.rs  resize_handle.rs  tile_palette.rs  tilemap_editor.rs  tilemap_panel.rs
editor/src/world/: coord.rs  mod.rs  world_actions.rs  world_editor.rs  world_editor_actions.rs
engine_core/: Cargo.toml
engine_core/src/: constants.rs  engine_global.rs  global.rs  input.rs  lib.rs  physics.rs  player.rs
engine_core/src/animation/: animation_clip.rs  animation_system.rs  aseprite_import.rs  mod.rs
engine_core/src/assets/: asset_manager.rs  core_assets.rs  mod.rs  sprite.rs
engine_core/src/audio/: audio_source.rs  command_queue.rs  diagnostics.rs  loader.rs  mod.rs  runtime.rs  tests.rs
engine_core/src/camera/: camera_manager.rs  game_camera.rs  mod.rs
engine_core/src/controls/: controls.rs  mod.rs
engine_core/src/diagnostics/: collector.rs  metrics.rs  mod.rs
engine_core/src/dialogue/: dialogue_config.rs  dialogue_data.rs  dialogue_manager.rs  interpolation.rs  mod.rs  speech_bubble.rs  speech_renderer.rs  speech_system.rs
engine_core/src/ecs/: capture.rs  component.rs  component_registry.rs  ecs.rs  entity.rs  facing_direction.rs  generic_module.rs  has_any.rs  inpsector_module.rs  inspector_layout.rs  inspector_module.rs  mod.rs  module.rs  module_factory.rs  position.rs  prefab.rs  reflect.rs  reflect_field.rs  transform.rs  world_ecs.rs
engine_core/src/game/: game.rs  game_map.rs  mod.rs  startup_mode.rs
engine_core/src/input/: input_constants.rs  input_snapshot.rs  input_table.rs  mod.rs
engine_core/src/lighting/: glow.rs  light.rs  light_shaders.rs  light_system.rs  lighting_pass.rs  lighting_stage.rs  mod.rs
engine_core/src/logging/: logging.rs  mod.rs
engine_core/src/menu/: input_binding.rs  menu_action_handler.rs  menu_builder.rs  menu_coordinates.rs  menu_element.rs  menu_focus.rs  menu_handler.rs  menu_interaction.rs  menu_manager.rs  menu_mode.rs  menu_navigation.rs  menu_panel.rs  menu_template.rs  mod.rs
engine_core/src/physics/: collider_system.rs  mod.rs
engine_core/src/prefab/: mod.rs
engine_core/src/rendering/: helpers.rs  mod.rs  render_entities.rs  render_room.rs  render_system.rs  render_system_wgpu.rs  renderable.rs
engine_core/src/script/: engine_api.rs  entity_handle.rs  entity_module.rs  input_module.rs  lua_module.rs  mod.rs  runtime_resources.rs  script.rs  script_manager.rs  script_system.rs
engine_core/src/scripting/: engine_api.rs  event_bus.rs  interactable.rs  lua_constants.rs  lua_schema.rs  mod.rs  script.rs  script_manager.rs
engine_core/src/shaders/: amb.frag  (+8 more)
engine_core/tests/: test.rs
game/: Cargo.toml  MENU_INTEGRATION.md  build.rs
game/src/: camera.rs  constants.rs  engine.rs  entity.rs  game.rs  game_global.rs  game_instance.rs  game_state.rs  lib.rs  main.rs  menu_handler.rs  modes.rs  playtest_main.rs
(+426 files in other folders)
