[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
engine_core = { path = "../engine_core" }
reflect_derive = { path = "../reflect_derive" }
macroquad = "0.4"
rfd = "0.13"
serde = { version = "1.0", features = ["derive"] }
ron = "0.9"
uuid = { version = "1.18", features = ["serde", "v4"] }
async-std   = { version = "1.12", features = ["attributes"] }
futures = "0.3"
serde_with = "3.14.0"
inventory = "0.1"  