[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
engine_core = { path = "../engine_core" }
game = { path = "../game" }
reflect_derive = { path = "../reflect_derive" }
log = "0.4"
flexi_logger = "0.27"
macroquad = "0.4.14"
rfd = "0.13"
serde = { version = "1.0", features = ["derive"] }
ron = "0.9"
uuid = { version = "1.18", features = ["serde", "v4"] }
async-std   = { version = "1.12", features = ["attributes"] }
futures = "0.3"
serde_with = "3.14.0"
inventory = "0.1"  
strum = "0.26"
strum_macros = "0.26"
once_cell = "1"
fontdue = "0.9.3"
image = "0.25.9"

[package.metadata.bundle]
name = "Bishop's Engine"
identifier = "com.bishop.engine"
version = "0.1.0"
category = "Game"
short_description = "A lightweight 2D game engine built with Rust."
icon = ["src/editor_assets/Icon.icns"]
# Game binaries (game, playtest etc) need to be compiled and added to Resources/game
# TODO: Automate this ^