[package]
name = "editor"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "Bishop"
path = "src/main.rs" 

[dependencies]
engine_core = { path = "../engine_core" }
game = { path = "../game" }
reflect_derive = { path = "../reflect_derive" }
log = "0.4"
flexi_logger = "0.27"
macroquad = "0.4.14"
rfd = "0.13"
serde = { version = "1.0", features = ["derive"] }
ron = "0.9"
uuid = { version = "1.18", features = ["serde", "v4"] }
async-std   = { version = "1.12", features = ["attributes"] }
futures = "0.3"
serde_with = "3.14.0"
inventory = "0.1"  
strum = "0.26"
strum_macros = "0.26"
once_cell = "1"
fontdue = "0.9.3"

[build-dependencies]
winres = "0.1.12"

# Bundle for macOS
[package.metadata.bundle]
name = "Bishop's Engine"
identifier = "com.bishop.engine"
version = "0.1.0"
category = "Game"
short_description = "A lightweight 2D game engine built with Rust."
icon = ["Icon.icns"]
resources = ["templates", "binaries"]
# Run "cargo make bundle-editor-mac" to build game binaries and copy
# copy them to the binaries folder