[package]
name = "engine_core"
version = "0.1.0"
edition = "2024"

[dependencies]
reflect_derive = { path = "../reflect_derive" }
macroquad = "0.4.14"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = "3.14.0"
erased-serde = { version = "0.3", features = ["alloc"] }
inventory = "0.1"  
ron = "0.9"
uuid = { version = "1.18", features = ["serde", "v4"] }
once_cell = "1"
futures = "0.3"
ctor = "0.2"
strum = "0.26"
strum_macros = "0.26"
rfd = "0.13"