[package]
name = "engine_core"
version = "0.1.0"
edition = "2024"

[dependencies]
reflect_derive = { path = "../reflect_derive" }
macroquad = "0.4.14"
log = "0.4"
flexi_logger = "0.27"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = "3.14.0"
erased-serde = { version = "0.3", features = ["alloc"] }
inventory = "0.1"  
ron = "0.9"
uuid = { version = "1.18", features = ["serde", "v4"] }
once_cell = "1"
futures = "0.3"
ctor = "0.2"
strum = "0.26"
strum_macros = "0.26"
rfd = "0.13"
directories-next = "2.0"
image = "0.25.9"