[package]
name = "engine_core"
version = "0.1.0"
edition = "2024"

[features]
default = ["wgpu"]
wgpu = ["bishop/wgpu", "widgets/wgpu"]
editor = []
test-utils = []

[dependencies]
widgets = { path = "../widgets", default-features = false }
bishop = { path = "../bishop", default-features = false, features = ["audio"] }
reflect_derive = { path = "../reflect_derive" }
ecs_component = { path = "../ecs_component" }
mlua = { version = "0.11.5", features = ["lua54", "vendored", "serde" ] }
log = "0.4"
flexi_logger = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.14.0"
inventory = "0.1"
ron = "0.9"
serde_json = "1.0"
uuid = { version = "1.18", features = ["serde", "v4"] }
once_cell = "1"
futures = { version = "0.3", default-features = false, features = ["executor"] }
strum = "0.26"
strum_macros = "0.26"
rfd = "0.13"
directories-next = "2.0"
image = { version = "0.25.9", default-features = false, features = ["png"] }
toml = "0.8"
rand = "0.8"
oddio = "0.6"
hound = "3.5"
