[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
engine_core = { path = "../engine_core" }
macroquad = "0.4" 
serde = { version = "1.0", features = ["derive"] }
ron = "0.9"
uuid = { version = "1.18", features = ["serde", "v4"] }

[lib]
name = "game_lib"
path = "src/lib.rs"

[[bin]]
name = "game"
path = "src/main.rs"

[[bin]]
name = "game-playtest"
path = "src/playtest_main.rs"